testsuite/tests/structs/invalid_struct/test.out
test.py:14: error: Struct subclasses must derive from Struct only

Done
